<resources>
    <string name="app_name">Watch Sitter</string>
    <string name="lable_alarm">Alarm</string>
    <string name="lable_contacts">Contacts</string>


    <!--buttons action bar -->
    <string name="actionBtnInstructions">Instructions</string>
    <string name="actionBtnOfProgramm">About the program</string>
    <string name="actionBtnFromDeveloper">More from Developer</string>
    <string name="actionBtnAdviseFriend">Suggest to friends</string>

    <!-- week days -->
    <string name="daySunday">Sunday</string>
    <string name="dayMonday">Monday</string>
    <string name="dayTuesday">Tuesday</string>
    <string name="dayWednesday">Wednesday</string>
    <string name="dayThursday">Thursday</string>
    <string name="dayFriday">Friday</string>
    <string name="daySaturday">Saturday</string>


    <string name="setTimeAlarm">Set time</string>
    <string name="setRepeat">Repeat</string>
    <string name="setDifficulty">Difficulty</string>
    <string name="setRingtone">Ringtone</string>
    <string name="strEveryDay">Every Day</string>
    <string name="strErrorName">enter your name</string>
    <string name="strErrorPhone">enter your phone</string>
    <string name="strVersion">Version 2.3 final</string>



    <!-- all dialogs-->
    <string name="dialogTitleDel">Delete</string>
    <string name="dialogMsgDelAlarm">Delete this alarm?</string>
    <string name="dialogMsgDelPers">Are you sure you want to delete the contact from the list of recipients?</string>
    <string name="dialogMsgStartInstructions">To start the program you must set the alarm clock and select the contact (contacts) to receive the message.</string>
    <string name="dialogMsgInstructions">After you select a contact, and set the alarm clock will begin its work program, provided that the phone is switched on. Alarms are triggered on time. Otlyuchit Service must be within 5 minutes. If the alarm does not turn off, then after 5 minutes, the program will send a message to selected contacts. Enjoy your use!</string>
    <string name="dialogCheckPermissionContact">The program uses the phone book data, so that you would select a contact as a recipient, who will receive an alarm signal in the form of sms-messages. Phonebook data are only available to you and will not be transmitted. Without your permission, it makes no sense to continue using the program.</string>
    <string name="dialogMsgAuth">In connection with the change in the content conditions of the program in the market, for further use of the program, you need to enter your name and a valid phone number. Thereby you confirm our <a href="https://sites.google.com/view/watch-sitter/">Privacy Policy</a>.\nDo not worry, your data is not available to anyone!</string>

    <!-- Buttons -->
    <string name="btnOK">OK</string>
    <string name="btnYes">Yes</string>
    <string name="btnNo">No</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnStopAlarm">Stop\nAlarm</string>
    <string name="btnFeedback">feedback</string>
    <string name="btnPrivacyPolicy"><u>Privacy Policy</u></string>


    <!-- Texts -->
    <string name="textAlarms">Alarms:</string>
    <string name="textPersons">Contacts that will receive messages:</string>
    <string name="textTimer">Alarm Clock turn off after:</string>
    <string name="textSendSMS">Watch Sitter. %1$s did not turn off the alarm. Call back to his number %2$s!</string>
    <string name="textTitleImportant">Important</string>

    <string name="nameDeveloper">Matatov Yury\nMatatov1989@gmail.com</string>
    <string name="nameDesigner">Matatov Nikita\nDocmat63@gmail.com</string>

    <string name="hintTypeName">Enter your name...</string>
    <string name="hintTypePhone">Enter your phone...</string>


    <string name="toastLimitSelected">only three contacts</string>





    <!-- Main Activity/Fragment -->
    <string name="empty_view_text">Press the Floating Action Button to add an alarm!</string>

    <!-- Edit Alarm Activity/Fragment -->
    <string name="time">Time</string>
    <string name="label">Label</string>
    <string name="days">Days</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="add_label_hint">Add a label!</string>
    <string name="update_complete">Changes Saved</string>
    <string name="update_failed">Update Failed</string>
    <string name="delete_complete">Alarm Deleted</string>
    <string name="delete_failed">Delete Failed</string>
    <string name="delete_dialog_title">Confirm Delete Alarm</string>
    <string name="delete_dialog_content">Are you sure you would like to delete this alarm?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Edit Alarm Menu -->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- Alarm Landing Page Activity/Fragment -->
    <string name="launch_main_activity">Launch Main Activity</string>
    <string name="dismiss">Dismiss</string>

    <!-- Days -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>


</resources>
